--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -658,7 +658,10 @@ menu.importconfig   = Import configuration...
 menu.logout         = Tancar sessi\u00F3
 menu.saveall        = Desa-ho tot com a ...
 menu.savechart      = Desa el gr\u00E0fic com ...
+menu.theme          = Themes
+menu.tools          = Tools
 menu.update         = Update course
+menu.view           = View
 
 message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
 
@@ -704,6 +707,7 @@ tab.section            = Secci\u00F3
 tab.visualization      = Visual analytic
 
 text.all                = Tots
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Els arxius locals
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Hores
 text.inprogress         = In progress
 text.lastaccess         = \u00DAltim acc\u00E9s:
+text.license            = License: MIT
 text.minutes            = Minuts
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Sense coincid\u00E8ncies
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recents
@@ -728,8 +735,7 @@ text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = Tercer interval
 
