--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -658,7 +658,10 @@ menu.importconfig   = Import configuration...
 menu.logout         = Ausloggen
 menu.saveall        = Alles speichern unter ..
 menu.savechart      = Grafik speichern unter ...
+menu.theme          = Themes
+menu.tools          = Tools
 menu.update         = Update course
+menu.view           = View
 
 message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
@@ -704,6 +707,7 @@ tab.section            = Abschnitt
 tab.visualization      = Visual analytic
 
 text.all                = Alles
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Lokale Dateien
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Std
 text.inprogress         = In progress
 text.lastaccess         = Letzter Zugriff:
+text.license            = License: MIT
 text.minutes            = Protokoll
 text.moodle             = Moodle: 
 text.never              = noch nie
 text.nousers            = Kein Zufall
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
@@ -728,8 +735,7 @@ text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = Terz
 
