--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -173,7 +173,7 @@ label.groupbydate                 = Group by:
 label.host                        = Host:
 label.lastupdate                  = Last local update:
 label.loadingActivitiesCompletion = Downloading Activity Completion for every user...
-label.loadingqualifier            = Generating course qualifier... (This process may take some time)
+label.loadingqualifier            = Generating course gradebook... (This process may take some time)
 label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded: 
 label.loggedin                    = Logged in:
@@ -644,21 +644,24 @@ log.event.xls_grade_exported                                    = XLS grade expo
 log.event.xml_grade_exported                                    = XML grade exported
 log.event.zip_archive_of_folder_downloaded                      = Zip archive of folder downloaded
 
-menu.about          = About application
-menu.changeconfig   = Change configuration
+menu.about          = _About application
+menu.changeconfig   = _Change configuration
 menu.changesubject  = _Change course
-menu.clearselection = Clear selection
-menu.edit           = Edit
-menu.exit           = Exit
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = Export CSV data...
+menu.clearselection = _Clear selection
+menu.edit           = _Edit
+menu.exit           = _Close
+menu.exportconfig   = Ex_port configuration...
+menu.exportcsv      = E_xport CSV data...
 menu.file           = _File
-menu.help           = Help
-menu.importconfig   = Import configuration...
-menu.logout         = Logout
+menu.help           = _Help
+menu.importconfig   = _Import configuration...
+menu.logout         = _Logout
 menu.saveall        = Save all as...
-menu.savechart      = Save chart as...
-menu.update         = Update course
+menu.savechart      = _Save chart as...
+menu.theme          = _Themes
+menu.tools          = _Tools
+menu.update         = _Update course
+menu.view           = _View
 
 message.export_csv_success = CSV export successfully. Review the files in the directory: 
 
@@ -704,6 +707,7 @@ tab.section            = Sections
 tab.visualization      = Visual analytic
 
 text.all                = All
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Local Files
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Hours
 text.inprogress         = In progress
 text.lastaccess         = Last access: 
+text.license            = License: MIT
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Never
 text.nousers            = No coincidences
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recent
@@ -728,8 +735,7 @@ text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = Third interval
 
