--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -644,21 +644,24 @@ log.event.xls_grade_exported                                    = Calificaci\u00
 log.event.xml_grade_exported                                    = Calificaci\u00F3n XML exportada
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
 
-menu.about          = Acerca de la aplicaci\u00F3n
-menu.changeconfig   = Cambiar configuraci\u00F3n
+menu.about          = _Acerca de la aplicaci\u00F3n
+menu.changeconfig   = Ca_mbiar configuraci\u00F3n
 menu.changesubject  = _Cambiar curso
-menu.clearselection = Borrar selecci\u00F3n
-menu.edit           = Editar
-menu.exit           = Salir
-menu.exportconfig   = Exportar configuraci\u00F3n...
-menu.exportcsv      = Exportar datos CSV...
+menu.clearselection = _Borrar selecci\u00F3n
+menu.edit           = _Editar
+menu.exit           = _Salir
+menu.exportconfig   = Ex_portar configuraci\u00F3n...
+menu.exportcsv      = E_xportar datos CSV...
 menu.file           = _Archivo
-menu.help           = Ayuda
-menu.importconfig   = Importar configuraci\u00F3n...
-menu.logout         = Cerrar sesi\u00F3n
+menu.help           = _Ayuda
+menu.importconfig   = _Importar configuraci\u00F3n...
+menu.logout         = _Cerrar sesi\u00F3n
 menu.saveall        = Guardar todo como...
-menu.savechart      = Guardar gr\u00E1fico como...
-menu.update         = Actualizar curso
+menu.savechart      = _Guardar gr\u00E1fico como...
+menu.theme          = _Temas
+menu.tools          = _Herramientas
+menu.update         = Actua_lizar curso
+menu.view           = _Ver
 
 message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
 
@@ -704,6 +707,7 @@ tab.section            = Secci\u00F3n
 tab.visualization      = An\u00E1lisis visual
 
 text.all                = Todos
+text.author             = Autores:
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.cache              = Archivos locales
 text.confirmation       = Confirmaci\u00F3n
@@ -716,10 +720,13 @@ text.future             = Futuros
 text.hours              = horas
 text.inprogress         = En progreso
 text.lastaccess         = \u00DAltimo acceso: 
+text.license            = Licencia: MIT
 text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = No hay coincidencias
+text.online_false       = Modo: Offline
+text.online_true        = Modo: Online
 text.pass               = Aprobado
 text.past               = Pasados
 text.recent             = Recientes
@@ -728,8 +735,8 @@ text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
-text.withconnection     = Modo: Online
-text.withoutconnection  = Modo: Offline
+text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional.\r\n
+text.thankstitle        = Agradecimientos especiales:
 
 thirdInterval = Tercer intervalo
 
