--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -658,7 +658,10 @@ menu.importconfig   = Import configuration...
 menu.logout         = Connectez - Out
 menu.saveall        = Enregistrer tout sous ...
 menu.savechart      = Enregistrer le graphique sous ...
+menu.theme          = Themes
+menu.tools          = Tools
 menu.update         = Update course
+menu.view           = View
 
 message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
@@ -704,6 +707,7 @@ tab.section            = Section
 tab.visualization      = Visual analytic
 
 text.all                = Tout
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Heures
 text.inprogress         = In progress
 text.lastaccess         = Dernier acc\u00E8s:
+text.license            = License: MIT
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
 text.nousers            = Pas de co\u00EFncidences
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = R\u00E9cente
@@ -728,8 +735,7 @@ text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = Troisi\u00E8me intervalle
 
