--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -658,7 +658,10 @@ menu.importconfig   = Import configuration...
 menu.logout         = Disconnettersi
 menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
+menu.theme          = Themes
+menu.tools          = Tools
 menu.update         = Update course
+menu.view           = View
 
 message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory: 
 
@@ -704,6 +707,7 @@ tab.section            = Sezione
 tab.visualization      = Visual analytic
 
 text.all                = Tutti
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = File locali
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Ore
 text.inprogress         = In progress
 text.lastaccess         = Ultimo accesso:
+text.license            = License: MIT
 text.minutes            = Minuti
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Nessuna coincidenza
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recente
@@ -728,8 +735,7 @@ text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = terzo intervallo
 
