--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -658,7 +658,10 @@ menu.importconfig   = Import configuration...
 menu.logout         = Sair
 menu.saveall        = Salvar tudo como ...
 menu.savechart      = Salvar gr\u00E1fico como ...
+menu.theme          = Theme
+menu.tools          = Tools
 menu.update         = Update course
+menu.view           = View
 
 message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 
@@ -704,6 +707,7 @@ tab.section            = Se\u00E7\u00E3o
 tab.visualization      = Visual analytic
 
 text.all                = Todos
+text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Ficheiros locais
 text.confirmation       = Confirmation
@@ -716,10 +720,13 @@ text.future             = Future
 text.hours              = Horas
 text.inprogress         = In progress
 text.lastaccess         = \u00DAltimo acesso:
+text.license            = License: MIT
 text.minutes            = Minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = Sem coincid\u00EAncias
+text.online_false       = Mode: Offline
+text.online_true        = Mode: Online
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recentes
@@ -728,8 +735,7 @@ text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
-text.withconnection     = Mode: Online
-text.withoutconnection  = Mode: Offline
+text.thankstitle        = Special thanks:
 
 thirdInterval = terceiro intervalo
 
