--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -706,7 +706,7 @@ tab.logs               = Logs
 tab.section            = Sections
 tab.visualization      = Visual analytic
 
-text.all                = All
+text.all                = Select/Deselect all
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Local Files
@@ -735,6 +735,7 @@ text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
+text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Special thanks:
 
 thirdInterval = Third interval
