--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -706,7 +706,7 @@ tab.logs               = Logs
 tab.section            = Se\u00E7\u00E3o
 tab.visualization      = Visual analytic
 
-text.all                = Todos
+text.all                = Select/Deselect all
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Ficheiros locais
@@ -735,6 +735,7 @@ text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
+text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Special thanks:
 
 thirdInterval = terceiro intervalo
