--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -706,7 +706,7 @@ tab.logs               = Registros
 tab.section            = Secci\u00F3n
 tab.visualization      = An\u00E1lisis visual
 
-text.all                = Todos
+text.all                = Seleccionar/Deseleccionar todos
 text.author             = Autores:
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.cache              = Archivos locales
@@ -735,7 +735,7 @@ text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
-text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional.\r\n
+text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
 text.thankstitle        = Agradecimientos especiales:
 
 thirdInterval = Tercer intervalo
