--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -706,7 +706,7 @@ tab.logs               = Les journaux
 tab.section            = Section
 tab.visualization      = Visual analytic
 
-text.all                = Tout
+text.all                = Select/Deselect all
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
@@ -735,6 +735,7 @@ text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
+text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle        = Special thanks:
 
 thirdInterval = Troisi\u00E8me intervalle
