More info in about app

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -172,7 +172,7 @@ label.group                       = Group:
 label.groupbydate                 = Group by: 
 label.host                        = Host:
 label.lastupdate                  = Last local update:
-label.loadingActivitiesCompletion = Downloading Activity Completion for every user...
+label.loadingActivitiesCompletion = Downloading Activity Completion for each user...
 label.loadingqualifier            = Generating course gradebook... (This process may take some time)
 label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded: 
@@ -656,6 +656,7 @@ menu.file           = _File
 menu.help           = _Help
 menu.importconfig   = _Import configuration...
 menu.logout         = _Logout
+menu.moreinfo       = _More information
 menu.saveall        = Save all as...
 menu.savechart      = _Save chart as...
 menu.theme          = _Themes
@@ -736,7 +737,7 @@ text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Special thanks:
+text.thankstitle        = Acknowledgments:
 
 thirdInterval = Third interval
 
