--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -656,6 +656,7 @@ menu.file           = _File
 menu.help           = Aiuto
 menu.importconfig   = Import configuration...
 menu.logout         = Disconnettersi
+menu.moreinfo       = _More information
 menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
 menu.theme          = Themes
@@ -736,7 +737,7 @@ text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Special thanks:
+text.thankstitle        = Acknowledgments:
 
 thirdInterval = terzo intervallo
 
