--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -656,6 +656,7 @@ menu.file           = _Dossier
 menu.help           = Ajuda
 menu.importconfig   = Import configuration...
 menu.logout         = Tancar sessi\u00F3
+menu.moreinfo       = _More information
 menu.saveall        = Desa-ho tot com a ...
 menu.savechart      = Desa el gr\u00E0fic com ...
 menu.theme          = Themes
@@ -736,7 +737,7 @@ text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Special thanks:
+text.thankstitle        = Acknowledgments:
 
 thirdInterval = Tercer interval
 
