--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -656,6 +656,7 @@ menu.file           = _Archivo
 menu.help           = _Ayuda
 menu.importconfig   = _Importar configuraci\u00F3n...
 menu.logout         = _Cerrar sesi\u00F3n
+menu.moreinfo       = _M\u00E1s informaci\u00F3n
 menu.saveall        = Guardar todo como...
 menu.savechart      = _Guardar gr\u00E1fico como...
 menu.theme          = _Temas
@@ -736,7 +737,7 @@ text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
 text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
-text.thankstitle        = Agradecimientos especiales:
+text.thankstitle        = Agradecimientos:
 
 thirdInterval = Tercer intervalo
 
