--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -656,6 +656,7 @@ menu.file           = _Fichier
 menu.help           = Aidez-moi
 menu.importconfig   = Import configuration...
 menu.logout         = Connectez - Out
+menu.moreinfo       = _More information
 menu.saveall        = Enregistrer tout sous ...
 menu.savechart      = Enregistrer le graphique sous ...
 menu.theme          = Themes
@@ -736,7 +737,7 @@ text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Special thanks:
+text.thankstitle        = Acknowledgments:
 
 thirdInterval = Troisi\u00E8me intervalle
 
