--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -656,6 +656,7 @@ menu.file           = _Arquivo
 menu.help           = Socorro
 menu.importconfig   = Import configuration...
 menu.logout         = Sair
+menu.moreinfo       = _More information
 menu.saveall        = Salvar tudo como ...
 menu.savechart      = Salvar gr\u00E1fico como ...
 menu.theme          = Theme
@@ -736,7 +737,7 @@ text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Special thanks:
+text.thankstitle        = Acknowledgments:
 
 thirdInterval = terceiro intervalo
 
