--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -172,7 +172,7 @@ label.group                       = Gruppe:
 label.groupbydate                 = Gruppiere nach:
 label.host                        = Wirt:
 label.lastupdate                  = Letzte lokale Aktualisierung:
-label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer ...
+label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer...
 label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
 label.loadingstats                = Statistiken werden erstellt ...
 label.loadingstudents             = Sch\u00FClernoten geladen:
@@ -189,7 +189,7 @@ label.selectcourse                = Bitte w\u00E4hlen Sie einen Kurs aus:
 label.setMax                      = Vorgeschlagene maximale Skala \u00E4ndern:
 label.startdate                   = Startbezugsdatum:
 label.type                        = Art:
-label.updatinglog                 = Protokoll wird aktualisiert ...
+label.updatinglog                 = Protokoll wird aktualisiert ... (This process may take some time)
 label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
 label.withcompletion              = Completed Act.
