--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -189,7 +189,7 @@ label.selectcourse                = Please, select a course:
 label.setMax                      = Change suggested max scale: 
 label.startdate                   = Start reference date: 
 label.type                        = Type:
-label.updatinglog                 = Updating log...
+label.updatinglog                 = Updating log... (This process may take some time)
 label.user                        = User:
 label.welcome                     = Welcome
 label.withcompletion              = Completed Act.
