--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -172,8 +172,8 @@ label.group                       = Grupo:
 label.groupbydate                 = Agrupar por: 
 label.host                        = Host:
 label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
-label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario ...
-label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos minutos)
+label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario...
+label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
 label.loadingstats                = Generando estadisticas...
 label.loadingstudents             = Calificaciones de alumnos cargadas: 
 label.loggedin                    = Inicio sesi\u00F3n:
@@ -189,7 +189,7 @@ label.selectcourse                = Por favor, seleccione un curso:
 label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
-label.updatinglog                 = Actualizando log...
+label.updatinglog                 = Actualizando log... (Este proceso puede tardar unos segundos)
 label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
 label.withcompletion              = Act. Complet.
