--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -172,7 +172,7 @@ label.group                       = Groupe:
 label.groupbydate                 = Par groupe:
 label.host                        = H\u00F4te:
 label.lastupdate                  = Derni\u00E8re mise \u00E0 jour locale:
-label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur ...
+label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur...
 label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
 label.loadingstats                = G\u00E9n\u00E9rer des statistiques ...
 label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s:
@@ -189,7 +189,7 @@ label.selectcourse                = Veuillez choisir un cours:
 label.setMax                      = Changer l'\u00E9chelle max sugg\u00E9r\u00E9e:
 label.startdate                   = Date de r\u00E9f\u00E9rence de d\u00E9part:
 label.type                        = Type:
-label.updatinglog                 = Mise \u00E0 jour du journal ...
+label.updatinglog                 = Mise \u00E0 jour du journal ... (This process may take some time)
 label.user                        = Utilisateur:
 label.welcome                     = Bienvenue
 label.withcompletion              = Completed Act.
