--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -172,7 +172,7 @@ label.group                       = Gruppo:
 label.groupbydate                 = Raggruppa per:
 label.host                        = Ospite:
 label.lastupdate                  = Ultimo aggiornamento locale:
-label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente ...
+label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente...
 label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
 label.loadingstats                = Generazione di statistiche ...
 label.loadingstudents             = Voti degli studenti caricati:
@@ -189,7 +189,7 @@ label.selectcourse                = Per favore, seleziona un corso:
 label.setMax                      = Modifica scala massima suggerita:
 label.startdate                   = Inizia la data di riferimento:
 label.type                        = Genere:
-label.updatinglog                 = Aggiornamento del registro ...
+label.updatinglog                 = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.user                        = Utente:
 label.welcome                     = Benvenuto
 label.withcompletion              = Completed Act.
