--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -172,7 +172,7 @@ label.group                       = Grup:
 label.groupbydate                 = Agrupar per:
 label.host                        = Amfitri\u00F3:
 label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
-label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari ...
+label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari...
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
 label.loadingstats                = Generant estad\u00EDstiques ...
 label.loadingstudents             = S'han carregat les qualificacions dels estudiants:
@@ -189,7 +189,7 @@ label.selectcourse                = Seleccioneu un curs:
 label.setMax                      = Canvia l'escala m\u00E0xima suggerida:
 label.startdate                   = Data de refer\u00E8ncia inicial:
 label.type                        = Tipus:
-label.updatinglog                 = S'est\u00E0 actualitzant el registre ...
+label.updatinglog                 = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.user                        = Usuari:
 label.welcome                     = Benvinguda
 label.withcompletion              = Completed Act.
