--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -172,7 +172,7 @@ label.group                       = Grupo:
 label.groupbydate                 = Agrupar por:
 label.host                        = Hospedeiro:
 label.lastupdate                  = \u00DAltima atualiza\u00E7\u00E3o local:
-label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio ...
+label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio...
 label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
 label.loadingstats                = Gerando estat\u00EDsticas ...
 label.loadingstudents             = Notas do aluno carregado:
@@ -189,7 +189,7 @@ label.selectcourse                = Por favor, selecione um curso:
 label.setMax                      = Alterar escala m\u00E1xima sugerida:
 label.startdate                   = Data de refer\u00EAncia inicial:
 label.type                        = Tipo:
-label.updatinglog                 = Atualizando log ...
+label.updatinglog                 = Atualizando log ... (This process may take some time)
 label.user                        = Usu\u00E1rio:
 label.welcome                     = Bem vinda
 label.withcompletion              = Completed Act.
