--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -707,7 +707,7 @@ tab.logs               = Protokolle
 tab.section            = Abschnitt
 tab.visualization      = Visual analytic
 
-text.all                = Select/Deselect all
+text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Lokale Dateien
@@ -734,6 +734,7 @@ text.recent             = K\u00FCrzlich\r\n
 text.restoredefault     = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
+text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
