--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -158,7 +158,6 @@ initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
 
-label.activity                    = Letzte Verbindung:
 label.categoryitem                = Kategorie / Gegenstand:
 label.close                       = Schlie\u00DFen
 label.component                   = Komponente:
@@ -174,8 +173,8 @@ label.host                        = Wirt:
 label.lastupdate                  = Letzte lokale Aktualisierung:
 label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer...
 label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
-label.loadingstats                = Statistiken werden erstellt ...
-label.loadingstudents             = Sch\u00FClernoten geladen:
+label.loadingstats                = Statistiken werden erstellt...
+label.loadingstudents             = Sch\u00FClernoten geladen...
 label.loggedin                    = Logged in:
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
