--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -158,7 +158,6 @@ initialRoles = Initial Roles
 
 initialTypeTimes = Default time unit
 
-label.activity                    = Last connect.:
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
@@ -175,7 +174,7 @@ label.lastupdate                  = Last local update:
 label.loadingActivitiesCompletion = Downloading Activity Completion for each user...
 label.loadingqualifier            = Generating course gradebook... (This process may take some time)
 label.loadingstats                = Generating statistics...
-label.loadingstudents             = Student grades loaded: 
+label.loadingstudents             = Student grades loaded...
 label.loggedin                    = Logged in:
 label.never                       = Not available
 label.of                          = of
