--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -158,7 +158,6 @@ initialRoles = Roles Iniciales
 
 initialTypeTimes = Unidad de tiempo predeterminado
 
-label.activity                    = \u00DAlt. conex.:
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
@@ -175,7 +174,7 @@ label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
 label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario...
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
 label.loadingstats                = Generando estadisticas...
-label.loadingstudents             = Calificaciones de alumnos cargadas: 
+label.loadingstudents             = Calificaciones de alumnos cargadas...
 label.loggedin                    = Inicio sesi\u00F3n:
 label.never                       = No disponible
 label.of                          = de
@@ -189,7 +188,7 @@ label.selectcourse                = Por favor, seleccione un curso:
 label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
-label.updatinglog                 = Actualizando log... (Este proceso puede tardar unos segundos)
+label.updatinglog                 = Actualizando log... (Este proceso puede tardar cierto tiempo)
 label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
 label.withcompletion              = Act. Complet.
