--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -158,7 +158,6 @@ initialRoles = Roles iniciais
 
 initialTypeTimes = unidade de tempo padr\u00E3o
 
-label.activity                    = \u00DAltima conex\u00E3o:
 label.categoryitem                = Categoria / Item:
 label.close                       = Perto
 label.component                   = Componente:
@@ -174,8 +173,8 @@ label.host                        = Hospedeiro:
 label.lastupdate                  = \u00DAltima atualiza\u00E7\u00E3o local:
 label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio...
 label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
-label.loadingstats                = Gerando estat\u00EDsticas ...
-label.loadingstudents             = Notas do aluno carregado:
+label.loadingstats                = Gerando estat\u00EDsticas...
+label.loadingstudents             = Notas do aluno carregado...
 label.loggedin                    = Logged in:
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
