--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -158,7 +158,6 @@ initialRoles = Els rols inicials
 
 initialTypeTimes = unitat de temps predeterminat
 
-label.activity                    = \u00DAltima connexi\u00F3:
 label.categoryitem                = Categoria / article:
 label.close                       = Tanca
 label.component                   = Component:
@@ -174,8 +173,8 @@ label.host                        = Amfitri\u00F3:
 label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
 label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari...
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
-label.loadingstats                = Generant estad\u00EDstiques ...
-label.loadingstudents             = S'han carregat les qualificacions dels estudiants:
+label.loadingstats                = Generant estad\u00EDstiques...
+label.loadingstudents             = S'han carregat les qualificacions dels estudiants...
 label.loggedin                    = Logged in:
 label.never                       = No disponible
 label.of                          = de
