--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -158,7 +158,6 @@ initialRoles = Le r\u00F4le initial
 
 initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
 
-label.activity                    = Derni\u00E8re connexion:
 label.categoryitem                = Cat\u00E9gorie / article:
 label.close                       = Fermer
 label.component                   = Composant:
@@ -174,8 +173,8 @@ label.host                        = H\u00F4te:
 label.lastupdate                  = Derni\u00E8re mise \u00E0 jour locale:
 label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur...
 label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
-label.loadingstats                = G\u00E9n\u00E9rer des statistiques ...
-label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s:
+label.loadingstats                = G\u00E9n\u00E9rer des statistiques...
+label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s...
 label.loggedin                    = Logged in:
 label.never                       = Indisponible
 label.of                          = de
