--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -158,7 +158,6 @@ initialRoles = Ruoli iniziali
 
 initialTypeTimes = unit\u00E0 di tempo predefinito
 
-label.activity                    = Ultima connessione:
 label.categoryitem                = Categoria / Articolo:
 label.close                       = Vicino
 label.component                   = Componente:
@@ -174,8 +173,8 @@ label.host                        = Ospite:
 label.lastupdate                  = Ultimo aggiornamento locale:
 label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente...
 label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
-label.loadingstats                = Generazione di statistiche ...
-label.loadingstudents             = Voti degli studenti caricati:
+label.loadingstats                = Generazione di statistiche...
+label.loadingstudents             = Voti degli studenti caricati...
 label.loggedin                    = Logged in:
 label.never                       = Non disponibile
 label.of                          = di
